manifests/old-manifests/service-3.yaml
apiVersion: v1
kind: Service
metadata:
  name: images-svc
spec:
  type: ClusterIP
  selector:
    app: images
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000
